Update build script to install dependencies

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "build": "echo 'Nothing to build'"
+    "build": "npm install"
   },
   "dependencies": {
     "cors": "^2.8.5",
